--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "autoload": {
         "psr-4": {
-            "uMod\\": "src/",
+            "uMod\\Evaluator\\": "src/Evaluator",
             "uMod\\Tests\\": "tests/"
         }
     }
