--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,4 @@ before_script:
 
 script: 
   - mkdir -p build/logs
-  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml ~/tests
-  
-after_script:
-- php vendor/bin/coveralls -v
+  - vendor/bin/phpunit tests
