--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "autoload": {
         "psr-4": {
             "uMod\\": "src/",
+            "uMod\\Evaluator\\Exceptions\\": "src/Evaluator/Exceptions",
             "uMod\\Tests\\": "tests/"
         }
     }
